[package]
name = "tarium"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tarium_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
atrium-api = "0.18.2"
atrium-xrpc-client = "0.5.0"
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = "2.0.0-beta.2"
thiserror = "1.0.57"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.77"

